@@ -1,0 +1,5 @@
+Sydney	35
+Adelaide	12
+Perth	14
+Melbourne	28
+Brisbane	19
