@@ -1,0 +1,2 @@
+sample*.png
+sample*.gif
